fix: fix spacing around suggestions in query validation message

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -103,7 +103,6 @@
 .react-autoql-safety-net-selector-container {
   display: inline-block;
   position: relative;
-  margin-left: -5px;
 }
 .react-autoql-select-popup-container.safetynet-select {
   padding: 5px 0;
@@ -162,7 +161,7 @@
   letter-spacing: 0.05em;
   font-family: inherit;
   font-size: inherit;
-  margin: 0 0.4em;
+  margin: 0;
   padding: 0;
   border-radius: 0;
   border-bottom: 1px dashed;
